syntax = "proto3";

package org.brewchain.cwv.service.game;
import "game.proto";

enum PExchangeModule {
	GEA = 0;//game-Exchange-api
};
enum PExchangeCommand {
	PES = 0; //获取房产交易列表-PropertyExchangeService
	BPS = 2; //购买房产-BuyPropertyService
	SPS = 3; //卖出房产-SellPropertyService
	CPE = 4; //撤销房产交易-CancelPropertyTradeService
	
};


message PSPropertyExchange	 //PES
{
	string property_name = 1;//房产名称
	string exchange_id = 2; //交易ID
	int32 property_type = 3;//房产类型
	int32 page_index = 4;//页索引
	int32 page_size = 5;//页大小
}

message PRetPropertyExchange //PES
{
	string ret_code = 1; //返回状态码
	string ret_msg = 2; //提示信息
	message PropertyExchange{
		string exchange_id = 3; //交易ID
		string owner = 7; // 拥有者
		double price = 8; // 价格
		double tax = 9;// 手续费
		int32 status = 10; // 交易状态 0发起，1成功，2撤销
		string create_user = 11;//创建者
		PRetProperty property = 13;//房产信息
	}
	
	repeated PropertyExchange exchange = 13;
	PageOut page = 15; //分页对象
}
message PSBuyProperty{
	string exchange_id = 1;//交易ID
	double amount = 2;//金额
	
}


message PSSellProperty{
	string propety_id = 1;//交易ID
	double price = 2; //出售价格
	double tax = 3;//手续费
	
}

message PSCommonExchange{
	string exchange_id = 1;//交易ID
}



